--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,134 @@
-body{
-    background: rgb(116, 186, 255);
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+html {
+  height: 100%;
+  overflow: hidden;
+}
+
+body { 
+  margin:0;
+  padding:0;
+	perspective: 1px;
+	transform-style: preserve-3d;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  font-family: 'Montserrat', sans-serif;
+}
+
+h1 {
+  font-size: 250%;
+  font-family: 'Array', sans-serif;
+  text-align: left;
+  }
+  
+p {
+  font-size: 120%;
+  line-height: 150%;
+  color: #333;
+}
+
+.slide {
+  position: relative;
+  padding: 25vh 10%;
+  min-height: 100vh;
+  width: 100vw;
+  box-sizing: border-box;
+  box-shadow: 0 -1px 5px rgba(0, 0, 0, .3);
+	transform-style: inherit;
+}
+
+img {
+  position: absolute;
+  top: 50%;
+  left: 35%;
+  width: 320px;
+  height: 240px;
+  transform: translateZ(.25px) scale(.75) translateX(-94%) translateY(-100%) rotate(2deg);
+  padding: 10px;
+  border-radius: 5px;
+  background: rgba(240,230,220, .8);
+  box-shadow: 0 0 8px rgba(0, 0, 0, .5);
+}
+
+img:last-of-type {
+  transform: translateZ(.4px) scale(.6) translateX(-104%) translateY(-40%) rotate(-5deg);
+}
+
+.slide:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, .7);
+}
+
+.title {
+  width: 50%;
+  padding: 5%;
+  border-radius: 30px;
+  background: rgba(240,230,220, .95);
+  box-shadow: 0 0 8px rgba(0, 0, 0, .3);
+}
+
+.slide:nth-child(2n) .title {
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.slide:nth-child(2n+1) .title {
+  margin-left: 0;
+  margin-right: auto; 
+}
+
+.slide, .slide:before {
+  background: 50% 50% / cover;  
+}
+
+.header {
+  text-align: left;
+  font-size: 190%;
+ color: rgba(255, 255, 255, 0.3);
+}
+
+#title {
+  background-image: url("https://images.pexels.com/photos/8241100/pexels-photo-8241100.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+  z-index:2;
+   position: relative;
+  left: -5%; /* Adjust the negative value to control the left side overflow */
+  width: 130%; /* Adjust the width to cover the entire width after the left side overflow */
+ padding: 0;
+  box-sizing: border-box; /* Ensure padding and border don't add to the width */
+}
+
+#slide1:before {
+  background-image: url("https://images.pexels.com/photos/7718175/pexels-photo-7718175.jpeg?auto=compress&cs=tinysrgb&w=1200");
+  transform: translateZ(-1px) scale(2);
+}
+
+#slide2 {
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Romanesco_broccoli_texture.jpg/2880px-Romanesco_broccoli_texture.jpg");
+  z-index:2;
+}
+
+#slide3:before {
+  background-image: url("https://images.pexels.com/photos/11280353/pexels-photo-11280353.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+  transform: translateZ(-1px) scale(2);
+}
+
+#slide4 {
+  background-image: url("https://images.pexels.com/photos/12376025/pexels-photo-12376025.jpeg?auto=compress&cs=tinysrgb&w=1200");
+  z-index:2;
+}
+
+#slide1 {
+  background-size: cover; /* Maintain cover background size for other slides */
+  background-position: center; /* Center the background image */
+}
+
+.header h1 {
+  margin: 0;
+  padding: 0;
 }
